Commit some modifications allowing the deployment of the OBR on another server using absolute url pointing on bundles.
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk@661376 13f79535-47bb-0310-9956-ffa450edef68